@@ -16,6 +16,9 @@ certificate-path = ${shared-path}
 ; WEBServer - Enable HTTP REST API requests via check_nsc_web.
 WEBServer = enabled
 
+; WEBAdminServer - Enable HTTP REST API requests for administrative tasks.
+WEBAdminServer = disabled
+
 ; NRPEServer - Enable NRPE server.
 NRPEServer = disabled
 
@@ -201,6 +204,21 @@ allow nasty characters = false
 
 ; allow arguments - This option determines whether or not the we will allow clients to specify arguments to commands that are executed.
 allow arguments = true
+
+
+[/settings/WEBAdmin/server]
+; port - Port to use for the admin rest api.
+port = ${/settings/WEB/server/port}
+
+; use ssl - This option controls if SSL will be enabled.
+use ssl = ${/settings/WEB/server/use ssl}
+
+; password - must be changed from default value
+; password can be stored encrypted when using the format: <HASH>:<hashed password>, ex.: SHA256:...
+; supported hash algorithms are SHA256, you can use "snclient hash" to generate password hashes.
+password = CHANGEME
+
+; use default web attributes here, ex.: password, allowed hosts, certificates, etc...
 
 
 [/settings/WindowsExporter/server]
